Add simple rule-based recommendations and site-style email

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,5 +5,7 @@ ENV WORKING_DIR="/usr/local/happy-fridge-1.0.jar" \
 
 
 COPY happy-fridge-1.0.jar  $WORKING_DIR
+COPY email_user.html  "/tmp/"
+COPY email_owner.html  "/tmp/"
 
 ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS -jar ${WORKING_DIR}" ]
